--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "description": "Adapter for NPAW's youboralib",
   "scripts": {
     "build": "gulp build",
-    "deploy": "rm -rf deploy && gulp deploy",
+    "deployable": "npm run build && rm -rf deploy && gulp deployable",
     "prepublish": "npm run build",
     "preversion": "npm run build",
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "youboralib": "git+https://github.com/NPAW/plugins-core-js.git"
+    "youboralib": "git+https://bitbucket.org/npaw/plugin-lib-js.git"
   },
   "devDependencies": {
     "fs": "0.0.1-security",
-    "gulp-npawify": "1.1.x"
+    "gulp-npawify": "1.2.x"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NPAW/videojs5-adapter-js.git"
+    "url": "git+https://bitbucket.org/npaw/videojs5-adapter-js.git"
   },
   "author": "Jordi Aguilar",
   "license": "MIT",
