--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "author": "Jordi Aguilar",
   "version": "6.0.0-rc",
   "repo": "git+https://bitbucket.org/npaw/videojs5-adapter-js.git",
-  "built": "Wed Jan 25 2017",
+  "built": "2017-01-30",
   "features": {
     "buffer": "monitor",
     "seek": "native",
