--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,15 @@ ext/
 node_modules
 bower_components
 
-# temp and output folders
+# temp and output
 coverage/
 docs/
 tmp/
 deploy/
 dist/
+
+#Configs
+jsconfig.json
 
 #logs
 *.log
