--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,9 @@
   "tech": "js",
   "author": "Jordi Aguilar",
   "version": "6.0.0-rc",
-  "repo": "git+https://bitbucket.org/npaw/videojs5-adapter-js.git",
-  "built": "2017-01-30",
+  "built": "2017-03-10",
+  "repo": "https://bitbucket.org/npaw/videojs5-adapter-js.git",
+  "libVersion": "git+https://bitbucket.org/npaw/plugin-lib-js.git",
   "features": {
     "buffer": "monitor",
     "seek": "native",
@@ -19,7 +20,6 @@
       "getResource"
     ]
   },
-  "libVersion": "6.0.0-rc",
   "ads": [
     {
       "buffer": "monitor",
