--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "tech": "js",
   "author": "Jordi Aguilar",
   "version": "6.0.0-rc",
-  "built": "2017-03-10",
+  "built": "2017-03-23",
   "repo": "https://bitbucket.org/npaw/videojs5-adapter-js.git",
-  "libVersion": "git+https://bitbucket.org/npaw/plugin-lib-js.git",
+  "libVersion": "git+https://bitbucket.org/npaw/lib-plugin-js.git",
   "features": {
     "buffer": "monitor",
     "seek": "native",
