--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,7 @@
+# This is a sample build configuration for Javascript.
 # Check our guides at https://confluence.atlassian.com/x/VYk8Lw for more examples.
 # Only use spaces to indent your .yml configuration.
-
+# -----
 # You can specify a custom docker image from Docker Hub as your build environment.
 image: node:7
 
@@ -12,10 +13,8 @@ pipelines:
           - npm test --verbose
           - if [ $? -eq 0 ]; then
           - npm run deployable --verbose
-          - mkdir -p ~/.ssh
-          - echo $QA_KNOWN_HOSTS >> ~/.ssh/known_hosts
-          - (umask 077; echo $QA_SSH_KEY | base64 --decode > ~/.ssh/id_rsa)
-          - scp -r deploy/last-build/* nicedeployer@qa-smartplugin.youbora.com:/home/nicedeployer/qa/catalog/v6/js/
+          - bash <(curl -s https://codecov.io/bash)
+          - scp -r deploy/last-build/* nicedeployer@qa-smartplugin.youbora.com:/home/nicedeployer/qa/catalog/v6/js
           - fi
 
   tags:
@@ -26,10 +25,8 @@ pipelines:
             - npm test --verbose
             - if [ $? -eq 0 ]; then
             - npm run deployable --verbose
-            - mkdir -p ~/.ssh
-            - echo $QA_KNOWN_HOSTS >> ~/.ssh/known_hosts
-            - (umask 077; echo $QA_SSH_KEY | base64 --decode > ~/.ssh/id_rsa)
-            - scp -r deploy/version/* nicedeployer@qa-smartplugin.youbora.com:/home/nicedeployer/qa/catalog/v6/js/
+            - bash <(curl -s https://codecov.io/bash)
+            - scp -r deploy/version/* nicedeployer@qa-smartplugin.youbora.com:/home/nicedeployer/qa/catalog/v6/js
             - fi
 
   custom: # Pipelines that are triggered manually
@@ -39,7 +36,9 @@ pipelines:
             - npm install --verbose
             - npm test --verbose
             - if [ $? -eq 0 ]; then
+            # Generate files
             - npm run deployable --verbose
+            # S3
             - apt-get update
             - apt-get -y install awscli
             - mkdir ~/.aws
@@ -49,5 +48,9 @@ pipelines:
             - echo "[default]" >> ~/.aws/config
             - echo "region="$AWS_DEFAULT_REGION >> ~/.aws/config
             - echo "output=json" >> ~/.aws/config
-            - aws s3 cp deploy/version/ s3://youbora-smartplugins/v6/js/ --recursive --acl=public-read
+            - aws s3 cp deploy/prod/ s3://youbora-smartplugins/v6/js/ --recursive --acl=public-read
+            # codecov
+            - bash <(curl -s https://codecov.io/bash)
+            # deploy PROD file to qa
+            - scp -r deploy/prodfile nicedeployer@qa-smartplugin.youbora.com:/home/nicedeployer/qa/catalog/v6/js
             - fi
