--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youbora-adapter-videojs5",
-  "version": "6.0.0-rc",
+  "version": "6.0.0",
   "main": "src/adapter.js",
   "description": "Adapter for NPAW's youboralib",
   "scripts": {
@@ -12,11 +12,11 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "youboralib": "git+https://bitbucket.org/npaw/lib-plugin-js.git"
+    "youboralib": "6.0.0"
   },
   "devDependencies": {
     "webpack": "^2.2.1",
-    "youboralib-util": "1.1.X"
+    "youboralib-util": "1.3.X"
   },
   "repository": {
     "type": "git",
