--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -53,4 +53,7 @@ pipelines:
             - bash <(curl -s https://codecov.io/bash)
             # deploy PROD file to qa
             - scp -r deploy/prodfile nicedeployer@qa-smartplugin.youbora.com:/home/nicedeployer/qa/catalog/v6/js
+            # npm publish
+            - echo $NPM_TOKEN >> ~/.npmrc
+            - npm publish --verbose -f
             - fi
