--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youbora-adapter-videojs5",
-  "version": "6.1.7",
+  "version": "6.1.8-beta",
   "main": "src/adapter.js",
   "description": "Adapter for NPAW's youboralib",
   "scripts": {
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist deploy manifest.json"
   },
   "dependencies": {
-    "youboralib": "6.1.11"
+    "youboralib": "6.1.13"
   },
   "devDependencies": {
     "webpack": "^2.2.1",
