--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youbora-adapter-videojs",
-  "version": "6.2.3",
+  "version": "6.3.0",
   "main": "src/adapter.js",
   "description": "Adapter for NPAW's youboralib",
   "scripts": {
@@ -12,10 +12,11 @@
     "clean": "rm -rf dist deploy manifest.json"
   },
   "dependencies": {
-    "youboralib": "6.2.6"
+    "youboralib": "6.3.0"
   },
   "devDependencies": {
-    "webpack": "^2.2.1",
+    "webpack": "^4.13.0",
+    "webpack-cli": "^3.0.8",
     "youboralib-util": "1.3.X"
   },
   "repository": {
