--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youbora-adapter-videojs",
-  "version": "6.4.0",
+  "version": "6.4.1",
   "main": "src/adapter.js",
   "description": "Adapter for NPAW's youboralib",
   "scripts": {
@@ -12,11 +12,11 @@
     "clean": "rm -rf dist deploy manifest.json"
   },
   "dependencies": {
-    "youboralib": "6.4.8"
+    "youboralib": "^6.4.9"
   },
   "devDependencies": {
-    "webpack": "^4.13.0",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2",
     "youboralib-util": "1.3.X"
   },
   "repository": {
